Fixed .travis.yml file

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,28 +1,28 @@
+sudo: false
+
 language: python
 
 python:
    - "3.5"
 
-sudo: false
-
-notifications:
-  slack: cs329e-spring-2017:AWsM9A5m1bIn3AFcRRVQEBVl
+before_install:
+    - pip install --upgrade pip
 
 install:
-    - pip install --upgrade pip
-    - pip --version
+    - pip install autopep8
     - pip install coverage
     - pip install numpy
     - pip install pylint
+    - pip install requests
 
 before_script:
     - uname -a
-    - printenv
-    - pip list
-    - coverage --version
-    - pylint   --version
+    - printenv | sort
 
 script:
     - date
     - ls -al
-- make test
+    - make test
+
+    Contact GitHub API Training Shop Blog About 
+
